--- a/08-power_effect_size.Rmd
+++ b/08-power_effect_size.Rmd
@@ -34,11 +34,13 @@ In the rest of the chapter we focus on conducting a sample size analysis based o
 2. Population-level effect size. To conduct a sample-size analysis you need an estimate of the population effect size you are trying to find. Most commonly, for theses, that means you needs a estimate of the population-level $d$-value (i.e., $\delta$) or population-level correlation ($\rho$) that you are trying to detect. 
 
 
-Comment about using past sample sizes...
+```{block2, type='rmdcaution'}
+Don't look to the sample size used in past research as a guide ...details here..
+```
 
 
 
-## Determining population effect
+## Estimating the population effect
 
 
 
